--- a/workflow_generator/ecflow_build.yml
+++ b/workflow_generator/ecflow_build.yml
@@ -1,44 +1,57 @@
 ---
+# scriptrepo: /path/to/scripts
+externs:
+- "Test Extern"
 suites:
   fcstonly:
     edits:
       CYC: env.ARCH_CYC
       EDATE: env.EDATE
-  #  externs:
-externs:
-- "Test Extern"
-families:
-  GFSApp:
+    nodes:
+      GFSApp:
+        edits:
+          NET: 'gfs'
+        gfs:
+          edits:
+            RUN: 'gfs'
+          atmos:
+            tasks:
+              jgfs_forecast:
+                triggers:
+                - task: jgfs_getic
+                - task: jgfs_atmos_post_manager
+              jgfs_getic:
+                events:
+                - test_event
+                edits:
+                  RUN: 'gfs'
+            post:
+              tasks:
+                jgfs_atmos_post_manager:
+                  triggers:
+                  - task: jgfs_forecast
+                    state: active
+                  events:
+                  - "release_post{ 4 }"
+                jgfs_atmos_post_f{ initial_count:2,env.FHMAX_GFS }:
+                  triggers:
+                  - task: jgfs_atmos_post_manager
+                    event: "release_post{ }"
+                  events:
+                  - "test_event"
+                  edits:
+                    FHRGRP: "{ initial_count:1, increment:6 }"
+                    FHRLST: "f{ }"
+                    FHR: "f{ increment:6 }"
+                    HR: "{ }"
+                    TEST: 'Test Edit'
+          wave:
+            tasks:
+              jgfs_forecast:
+  fcstplus:
     edits:
-      NET: 'gfs'
-    gfs:
-      edits:
-        RUN: 'gfs'
-jobs:
-  jgfs_forecast:
-    triggers:
-    - task: jgfs_getic
-    - task: jgfs_atmos_post_manager
-  jgfs_getic:
-    events:
-    - test_event
-    edits:
-      RUN: 'gfs'
-  jgfs_atmos_post_manager:
-    triggers:
-    - task: jgfs_forecast
-      state: active
-    events:
-    - "release_post{ 4 }"
-  jgfs_atmos_post_f{ env.FHMAX_GFS }:
-    triggers:
-    - task: jgfs_atmos_post_manager
-      event: "release_post{ }"
-    events:
-    - "test_event"
-    edits:
-      FHRGRP: "{ initial_count:1 }"
-      FHRLST: "f{ }"
-      FHR: "f{ increment:6 }"
-      HR: "{ }"
-      TEST: 'Test Edit'
+      CYC: '06'
+    nodes:
+      nonGFSApp:
+        tasks:
+          jgfs_forecast:
