--- a/env/WCOSS_DELL_P3.env
+++ b/env/WCOSS_DELL_P3.env
@@ -118,6 +118,30 @@ elif [ $step = "eupd" ]; then
     export USE_CFP=${USE_CFP:-"YES"}
     export APRUNCFP="$launcher \$ncmd $mpmd"
 
+elif [ $step = "eupdfsoi" ]; then
+
+    nth_max=$(($npe_node_max / $npe_node_eupdfsoi))
+
+    export NTHREADS_ENKF=${nth_eupdfsoi:-$nth_max}
+    [[ $NTHREADS_ENKF -gt $nth_max ]] && export NTHREADS_ENKF=$nth_max
+    export APRUN_ENKF="$launcher ${npe_enkf:-${npe_eupdfsoi:-$PBS_NP}}"
+
+    export CFP_MP=${CFP_MP:-"NO"}
+    export USE_CFP=${USE_CFP:-"YES"}
+    export APRUNCFP="$launcher \$ncmd $mpmd"
+
+elif [ $step = "efsoi" ]; then
+
+    nth_max=$(($npe_node_max / $npe_node_efsoi))
+
+    export NTHREADS_ENKF=${nth_efsoi:-$nth_max}
+    [[ $NTHREADS_ENKF -gt $nth_max ]] && export NTHREADS_ENKF=$nth_max
+    export APRUN_ENKF="$launcher ${npe_enkf:-${npe_efsoi:-$PBS_NP}}"
+
+    export CFP_MP=${CFP_MP:-"NO"}
+    export USE_CFP=${USE_CFP:-"YES"}
+    export APRUNCFP="$launcher \$ncmd $mpmd"
+
 elif [ $step = "fcst" ]; then
 
     #PEs and PEs/node can differ for GFS and GDAS forecasts if threading differs
@@ -156,6 +180,19 @@ elif [ $step = "efcs" ]; then
     [[ $NTHREADS_REGRID_NEMSIO -gt $nth_max ]] && export NTHREADS_REGRID_NEMSIO=$nth_max
     export APRUN_REGRID_NEMSIO="$launcher $LEVS"
 
+elif [ $step = "efcsfsoi" ]; then
+
+    nth_max=$(($npe_node_max / $npe_node_efcsfsoi))
+
+    export NTHREADS_FV3=${nth_efcsfsoi:-$nth_max}
+    [[ $NTHREADS_FV3 -gt $nth_max ]] && export NTHREADS_FV3=$nth_max
+    export cores_per_node=$npe_node_max
+    export APRUN_FV3="$launcher ${npe_fv3:-${npe_efcsfsoi:-$PBS_NP}}"
+
+    export NTHREADS_REGRID_NEMSIO=${nth_regrid_nemsio:-1}
+    [[ $NTHREADS_REGRID_NEMSIO -gt $nth_max ]] && export NTHREADS_REGRID_NEMSIO=$nth_max
+    export APRUN_REGRID_NEMSIO="$launcher $LEVS"
+
 elif [ $step = "post" ]; then
 
     nth_max=$(($npe_node_max / $npe_node_post))
@@ -188,6 +225,26 @@ elif [ $step = "ecen" ]; then
     [[ $NTHREADS_CYCLE -gt $npe_node_max ]] && export NTHREADS_CYCLE=$npe_node_max
     export APRUN_CYCLE="$launcher $npe_ecen"
 
+elif [ $step = "ecenfsoi" ]; then
+
+    nth_max=$(($npe_node_max / $npe_node_ecenfsoi))
+
+    export NTHREADS_ECEN=${nth_ecenfsoi:-$nth_max}
+    [[ $NTHREADS_ECEN -gt $nth_max ]] && export NTHREADS_ECEN=$nth_max
+    export APRUN_ECEN="$launcher ${npe_ecenfsoi:-$PBS_NP}"
+
+    export NTHREADS_CHGRES=${nth_chgres:-14}
+    [[ $NTHREADS_CHGRES -gt $npe_node_max ]] && export NTHREADS_CHGRES=$npe_node_max
+    export APRUN_CHGRES="time"
+
+    export NTHREADS_CALCINC=${nth_calcinc:-1}
+    [[ $NTHREADS_CALCINC -gt $nth_max ]] && export NTHREADS_CALCINC=$nth_max
+    export APRUN_CALCINC="$launcher ${npe_ecenfsoi:-$PBS_NP}"
+
+    export NTHREADS_CYCLE=${nth_cycle:-14}
+    [[ $NTHREADS_CYCLE -gt $npe_node_max ]] && export NTHREADS_CYCLE=$npe_node_max
+    export APRUN_CYCLE="$launcher $npe_ecenfsoi"
+
 elif [ $step = "esfc" ]; then
 
     nth_max=$(($npe_node_max / $npe_node_esfc))
@@ -200,6 +257,18 @@ elif [ $step = "esfc" ]; then
     [[ $NTHREADS_CYCLE -gt $npe_node_max ]] && export NTHREADS_CYCLE=$npe_node_max
     export APRUN_CYCLE="$launcher $npe_esfc"
 
+elif [ $step = "esfcfsoi" ]; then
+
+    nth_max=$(($npe_node_max / $npe_node_esfcfsoi))
+
+    export NTHREADS_ESFC=${nth_esfcfsoi:-$nth_max}
+    [[ $NTHREADS_ESFC -gt $nth_max ]] && export NTHREADS_ESFC=$nth_max
+    export APRUN_ESFC="$launcher ${npe_esfcfsoi:-$PBS_NP}"
+
+    export NTHREADS_CYCLE=${nth_cycle:-14}
+    [[ $NTHREADS_CYCLE -gt $npe_node_max ]] && export NTHREADS_CYCLE=$npe_node_max
+    export APRUN_CYCLE="$launcher $npe_esfcfsoi"
+
 elif [ $step = "epos" ]; then
 
     nth_max=$(($npe_node_max / $npe_node_epos))
@@ -207,6 +276,14 @@ elif [ $step = "epos" ]; then
     export NTHREADS_EPOS=${nth_epos:-$nth_max}
     [[ $NTHREADS_EPOS -gt $nth_max ]] && export NTHREADS_EPOS=$nth_max
     export APRUN_EPOS="$launcher ${npe_epos:-$PBS_NP}"
+
+elif [ $step = "eposfsoi" ]; then
+
+    nth_max=$(($npe_node_max / $npe_node_eposfsoi))
+
+    export NTHREADS_EPOS=${nth_eposfsoi:-$nth_max}
+    [[ $NTHREADS_EPOS -gt $nth_max ]] && export NTHREADS_EPOS=$nth_max
+    export APRUN_EPOS="$launcher ${npe_eposfsoi:-$PBS_NP}"
 
 elif [ $step = "init" ]; then
 
