Add -g and -traceback flags to utility builds if missing
- Reviewed the various global-workflow utility code builds and
added "-g" and/or "-traceback" flags if missing.
- Added to only WCOSS2 makefiles/modulefiles for now for ops.

Refs: #399, #791

--- a/sorc/fbwndgfs.fd/makefile.GENERIC
+++ b/sorc/fbwndgfs.fd/makefile.GENERIC
@@ -50,7 +50,7 @@ PROFLIB =	-lprof
 # To compile with flowtracing turned on, use the second line
 # To compile giving profile additonal information, use the third line
 # WARNING:  SIMULTANEOUSLY PROFILING AND FLOWTRACING IS NOT RECOMMENDED 
-FFLAGS =        -O3  -g -I ${IP_INC8} -assume byterecl -convert big_endian -r8 -i8 
+FFLAGS =        -O3 -g -traceback -I ${IP_INC8} -assume byterecl -convert big_endian -r8 -i8 
 #FFLAGS =	 -F
 #FFLAGS =	 -Wf"-ez"
 
