--- a/util/sorc/overgridid.fd/makefile
+++ b/util/sorc/overgridid.fd/makefile
@@ -1,7 +1,7 @@
 LIBS =    ${W3NCO_LIB4} ${BACIO_LIB4}
 OBJS=     overgridid.o
 overgridid:	overgridid.f
-	ftn -o overgridid overgridid.f $(LIBS)
+	ftn -g -traceback -o overgridid overgridid.f $(LIBS)
 clean:
 	-rm -f $(OBJS)
 
