--- a/util/sorc/mkgfsawps.fd/makefile.wcoss2
+++ b/util/sorc/mkgfsawps.fd/makefile.wcoss2
@@ -26,7 +26,7 @@ PROFLIB =	-lprof
 # To compile with flowtracing turned on, use the second line
 # To compile giving profile additonal information, use the third line
 # WARNING:  SIMULTANEOUSLY PROFILING AND FLOWTRACING IS NOT RECOMMENDED 
-FFLAGS =        -O3 -g -convert big_endian -r8 -i4 -assume noold_ldout_format
+FFLAGS =        -O3 -g -traceback -convert big_endian -r8 -i4 -assume noold_ldout_format
 
 # Lines from here on down should not need to be changed.  They are the
 # actual rules which make uses to build a.out.
