--- a/.gitignore
+++ b/.gitignore
@@ -24,7 +24,47 @@ fix/wafs
 parm/config/config.base
 parm/gldas
 parm/mon
-parm/post
+parm/post/AEROSOL_LUTS.datoptics_luts_DUST.dat
+parm/post/gtg.config.gfs
+parm/post/gtg_imprintings.txt
+parm/post/optics_luts_SALT.dat
+parm/post/optics_luts_SOOT.dat
+parm/post/optics_luts_SUSO.dat
+parm/post/optics_luts_WASO.dat
+parm/post/params_grib2_tbl_new
+parm/post/post_tag_gfs128
+parm/post/post_tag_gfs65
+parm/post/postcntrl_gefs.xml
+parm/post/postcntrl_gefs_aerosol.xml
+parm/post/postcntrl_gefs_anl.xml
+parm/post/postcntrl_gefs_chem.xml
+parm/post/postcntrl_gefs_f00.xml
+parm/post/postcntrl_gfs.xml
+parm/post/postcntrl_gfs_anl.xml
+parm/post/postcntrl_gfs_f00.xml
+parm/post/postcntrl_gfs_f00_two.xml
+parm/post/postcntrl_gfs_flux.xml
+parm/post/postcntrl_gfs_flux_f00.xml
+parm/post/postcntrl_gfs_goes.xml
+parm/post/postcntrl_gfs_goes.xml-new
+parm/post/postcntrl_gfs_two.xml
+parm/post/postcntrl_gfs_wafs.xml
+parm/post/postcntrl_gfs_wafs_anl.xml
+parm/post/postxconfig-NT-GEFS-ANL.txt
+parm/post/postxconfig-NT-GEFS-F00.txt
+parm/post/postxconfig-NT-GEFS.txt
+parm/post/postxconfig-NT-GFS-ANL.txt
+parm/post/postxconfig-NT-GFS-F00-TWO.txt
+parm/post/postxconfig-NT-GFS-F00.txt
+parm/post/postxconfig-NT-GFS-FLUX-F00.txt
+parm/post/postxconfig-NT-GFS-FLUX.txt
+parm/post/postxconfig-NT-GFS-GOES.txt
+parm/post/postxconfig-NT-GFS-TWO.txt
+parm/post/postxconfig-NT-GFS-WAFS-ANL.txt
+parm/post/postxconfig-NT-GFS-WAFS.txt
+parm/post/postxconfig-NT-GFS.txt
+parm/post/postxconfig-NT-gefs-aerosol.txt
+parm/post/postxconfig-NT-gefs-chem.txt
 parm/wafs
 
 # Ignore sorc and logs folders from externals
@@ -73,6 +113,7 @@ sorc/radmon_bcoef.fd
 sorc/radmon_bcor.fd
 sorc/radmon_time.fd
 sorc/recentersigp.fd
+sorc/upp.fd
 sorc/wafs_awc_wafavn.fd
 sorc/wafs_blending.fd
 sorc/wafs_blending_0p25.fd
