--- a/.gitignore
+++ b/.gitignore
@@ -81,7 +81,7 @@ sorc/wafs_gcip.fd
 sorc/wafs_grib2_0p25.fd
 sorc/wafs_makewafs.fd
 sorc/wafs_setmissing.fd
-
+sorc/upp.fd
 # Ignore scripts from externals
 #------------------------------
 # jobs symlinks
