Add build for GSI monitor
The monitoring scripts and programs for GSI have been extracted from the
GSI repo and placed in their own repo, so we now need to check out that
repo and add a new build script to compile the separated code.

--- a/sorc/gfs_build.cfg
+++ b/sorc/gfs_build.cfg
@@ -4,6 +4,7 @@
  Building ufs_model (ufs_model) ........................ yes
  Building ww3_prepost (ww3_prepost) .................... yes
  Building gsi (gsi) .................................... yes
+ Building gsi_monitor (gsi_monitor) .................... yes
  Building gldas (gldas) ................................ yes
  Building UPP (upp) .................................... yes
  Building ufs_utils (ufs_utils) ........................ yes
