--- a/env/ORION.env
+++ b/env/ORION.env
@@ -4,7 +4,7 @@ if [ $# -ne 1 ]; then
 
     echo "Must specify an input argument to set runtime environment variables!"
     echo "argument can be any one of the following:"
-    echo "atmanalrun"
+    echo "atmanalrun atmensanalrun"
     echo "anal sfcanl fcst post vrfy metp"
     echo "eobs eupd ecen efcs epos"
     echo "postsnd awips gempak"
@@ -61,6 +61,18 @@ elif [ $step = "atmanalrun" ]; then
     export NTHREADS_ATMANAL=${nth_atmanalrun:-$nth_max}
     [[ $NTHREADS_ATMANAL -gt $nth_max ]] && export NTHREADS_ATMANAL=$nth_max
     export APRUN_ATMANAL="$launcher -n $npe_atmanalrun"
+
+elif [ $step = "atmensanalrun" ]; then
+
+    export CFP_MP=${CFP_MP:-"YES"}
+    export USE_CFP=${USE_CFP:-"YES"}
+    export APRUNCFP="$launcher -n \$ncmd --multi-prog"
+
+    nth_max=$(($npe_node_max / $npe_node_atmensanalrun))
+
+    export NTHREADS_ATMENSANAL=${nth_atmensanalrun:-$nth_max}
+    [[ $NTHREADS_ATMENSANAL -gt $nth_max ]] && export NTHREADS_ATMENSANAL=$nth_max
+    export APRUN_ATMENSANAL="$launcher -n $npe_atmensanalrun"
 
 elif [ $step = "anal" ]; then
 
