Bug fix for gfs_bufr (postsnd) job
- Resource adjustments for the postsnd bufr_sounding job (based on GDIT
and Bo Cui testing).
- Fix to gfs_bufr code (Bo Cui).
- gfs_bufr build update to no longer build with "-qopenmp".

Refs: #399

--- a/env/WCOSS2.env
+++ b/env/WCOSS2.env
@@ -181,6 +181,8 @@ elif [ $step = "fv3ic" ]; then
 
 elif [ $step = "postsnd" ]; then
 
+    export MPICH_MPIIO_HINTS_DISPLAY=1
+    export OMP_NUM_THREADS=1
     export NTHREADS_POSTSND=${nth_postsnd:-1}
     export APRUN_POSTSND="$launcher -n $npe_postsnd --depth=$NTHREADS_POSTSND --cpu-bind depth"
     export NTHREADS_POSTSNDCFP=${nth_postsndcfp:-1}
