--- a/ush/nems.configure.cpld_aero_wave.IN
+++ b/ush/nems.configure.cpld_aero_wave.IN
@@ -66,7 +66,7 @@ WAV_attributes::
   OverwriteSlice = false
   diro = "."
   logfile = wav.log
-  mesh_wav = mesh.glo_30m.nc
+  mesh_wav = @[MESH_WAV]
   multigrid = @[MULTIGRID]
 ::
 
