--- a/ush/rocoto/hosts/hera.yaml
+++ b/ush/rocoto/hosts/hera.yaml
@@ -6,7 +6,7 @@ comroot: '/scratch1/NCEPDEV/global/glopara/com'
 homedir: '/scratch1/NCEPDEV/global/$USER'
 stmp: '/scratch1/NCEPDEV/stmp2/$USER'
 ptmp: '/scratch1/NCEPDEV/stmp4/$USER'
-noscrub': $HOMEDIR
+noscrub: $HOMEDIR
 account': fv3-cpu
 scheduler: slurm
 queue: batch
