--- a/parm/chem/AERO_HISTORY.rc
+++ b/parm/chem/AERO_HISTORY.rc
@@ -385,8 +385,8 @@ PC720x361-DC.LM: 72
   inst_aod.duration:   010000,
   inst_aod.ref_time:   000000,
   inst_aod.grid_label: PC720x361-DC
-  inst_aod.fields:     'CAEXTTAUCA.bc' , 'CA.bc'    , 'AOD_BC',
-                       'CAEXTTAUCA.oc' , 'CA.oc'    , 'AOD_OC',
+  inst_aod.fields:     'CA.bcEXTTAU'   , 'CA.bc'    , 'AOD_BC',
+                       'CA.ocEXTTAU'   , 'CA.oc'    , 'AOD_OC',
                        'DUEXTTAU'      , 'DU'       , 'AOD_DU',
                        'NIEXTTAU'      , 'NI'       , 'AOD_NI',
                        'SSEXTTAU'      , 'SS'       , 'AOD_SS',
@@ -403,8 +403,8 @@ PC720x361-DC.LM: 72
   tavg_2d_rad.duration:   120000,
   tavg_2d_rad.ref_time:   000000,
   tavg_2d_rad.grid_label: PC720x361-DC
-  tavg_2d_rad.fields:     'CAEXTTAUCA.bc' , 'CA.bc' ,
-                          'CAEXTTAUCA.oc' , 'CA.oc' ,
+  tavg_2d_rad.fields:     'CA.bcEXTTAU' , 'CA.bc' ,
+                          'CA.ocEXTTAU' , 'CA.oc' ,
                           'CASCATAUCA.bc' , 'CA.bc' ,
                           'CASCATAUCA.oc' , 'CA.oc' ,
                           'DUEXTTAU'      , 'DU' ,
