--- a/.gitignore
+++ b/.gitignore
@@ -77,6 +77,7 @@ sorc/gfs_post.fd
 sorc/gfs_wafs.fd
 sorc/gldas.fd
 sorc/gsi.fd
+sorc/gsi_utils.fd
 sorc/gsi_monitor.fd
 sorc/ufs_utils.fd
 sorc/verif-global.fd
