--- a/.shellcheckrc
+++ b/.shellcheckrc
@@ -1,2 +1,13 @@
 # Global settings for Spellcheck (https://github.com/koalaman/shellcheck)
 enable=all
+
+external-sources=false
+
+# Disable variable referenced but not assigned
+disable=SC2154
+
+# Disable following non-constant source
+disable=SC1090
+
+# Disable non-existent binary
+disable=SC1091
