--- a/sorc/gfs_build.cfg
+++ b/sorc/gfs_build.cfg
@@ -6,6 +6,7 @@
  Building gsi_enkf (gsi_enkf) .......................... yes
  Building gsi_utils (gsi_utils) ........................ yes
  Building gsi_monitor (gsi_monitor) .................... yes
+ Building gdas (gdas) .................................. yes
  Building gldas (gldas) ................................ yes
  Building UPP (upp) .................................... yes
  Building ufs_utils (ufs_utils) ........................ yes
