--- a/workflow/hosts/hera.yaml
+++ b/workflow/hosts/hera.yaml
@@ -10,11 +10,14 @@ noscrub: $HOMEDIR
 account: fv3-cpu
 scheduler: slurm
 queue: batch
-queue_service: service
+queue_service: batch
 partition_batch: hera
+partition_service: service
 chgrp_rstprod: 'YES'
 chgrp_cmd: 'chgrp rstprod'
 hpssarch: 'YES'
 localarch: 'NO'
 atardir: '/NCEPDEV/$HPSS_PROJECT/1year/$USER/$machine/scratch/$PSLOT'
+make_nsstbufr: 'NO'
+make_acftbufr: 'NO'
 supported_resolutions: ['C768', 'C384', 'C192', 'C96', 'C48']
