--- a/workflow/hosts/orion.yaml
+++ b/workflow/hosts/orion.yaml
@@ -10,11 +10,14 @@ noscrub: $HOMEDIR
 scheduler: slurm
 account: fv3-cpu
 queue: batch
-queue_service: service
+queue_service: batch
 partition_batch: orion
+partition_service: service
 chgrp_rstprod: 'YES'
 chgrp_cmd: 'chgrp rstprod'
 hpssarch: 'NO'
 localarch: 'NO'
 atardir: '$NOSCRUB/archive_rotdir/$PSLOT'
+make_nsstbufr: 'NO'
+make_acftbufr: 'NO'
 supported_resolutions: ['C768', 'C384', 'C192', 'C96', 'C48']
