--- a/workflow/hosts/wcoss2.yaml
+++ b/workflow/hosts/wcoss2.yaml
@@ -17,4 +17,6 @@ chgrp_cmd: 'chgrp rstprod'
 hpssarch: 'YES'
 localarch: 'NO'
 atardir: '/NCEPDEV/$HPSS_PROJECT/1year/$USER/$machine/scratch/$PSLOT'
+make_nsstbufr: 'NO'
+make_acftbufr: 'NO'
 supported_resolutions: ['C768', 'C384', 'C192', 'C96', 'C48']
